--- a/ui/index.html
+++ b/ui/index.html
@@ -21,5 +21,6 @@
     </body>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="assets/js/index.js"></script>
 </html>
